--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':DbModules', ':Libraries', ':Common', ':NetModules', ':CacheModules', ':UIModules', ':MvcModules', ':ModulesManager'
+include ':app', ':DbModules', ':Libraries', ':Common', ':NetModules', ':CacheModules', ':UIModules', ':MvcModules', ':ModulesManager', ':UpdateModules'
